<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Vocal Harmony" />

    <Button
        android:id="@+id/button_training"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_home_training"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home" />

    <Button
        android:id="@+id/button_how_do_i_sound"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_home_how_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_training" />

    <Button
        android:id="@+id/button_saved_files"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_home_saved_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_how_do_i_sound" />

    <Button
        android:id="@+id/button_access_data"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_home_access_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_saved_files" />

</androidx.constraintlayout.widget.ConstraintLayout>