<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:id="@+id/text_notifications_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_notification_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notifications_title"
        tools:text="Daily reminders are OFF." />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_schedule_reminders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_notification_status" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_cancel_reminders"
        app:layout_constraintEnd_toEndOf="@+id/button_schedule"
        app:layout_constraintStart_toStartOf="@+id/button_schedule"
        app:layout_constraintTop_toBottomOf="@+id/button_schedule" />


</androidx.constraintlayout.widget.ConstraintLayout>