<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.dashboard.SentenceRecordingFragment"> <TextView
    android:id="@+id/prompt_sentence_textview"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:gravity="center"
    android:minLines="3"
    android:textAppearance="?attr/textAppearanceHeadline6"
    app:layout_constraintBottom_toTopOf="@+id/guideline_buttons"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.8"
    tools:text="The rainbow is a division of white light into many beautiful colors." />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/record_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/record_button_start"
        app:icon="@android:drawable/ic_btn_speak_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_buttons" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/save_button_text" app:icon="@android:drawable/ic_menu_save"
        app:layout_constraintEnd_toStartOf="@+id/next_sentence_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/record_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_sentence_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/next_sentence_button_text" app:icon="@android:drawable/ic_media_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_button"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

    <TextView
        android:id="@+id/status_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        tools:text="Status: Ready to record" />

</androidx.constraintlayout.widget.ConstraintLayout>